docs/examples/microbots_introduction/log_analysis_logger_info.txt
(.venv) sikannan@sikannan-ubuntu-vm:~/codeBase/microbots-introduction$ python3 log_analysis_bot.py
INFO:microbots.environment.local_docker.LocalDockerEnvironment:🗂️  Created working directory at /home/sikannan/MICROBOTS_WORKDIR_da35245a
INFO:microbots.environment.local_docker.LocalDockerEnvironment:📦 Volume mapping: /home/sikannan/codeBase/microbots-introduction/code → /ro/code
INFO:microbots.environment.local_docker.LocalDockerEnvironment:🚀 Started container 3ebc67c5e0c6 with image kavyasree261002/shell_server:latest on host port 44517
INFO:microbots.environment.local_docker.LocalDockerEnvironment:🔒 Set up overlay mount for read-only directory at /workdir/code
INFO:microbots.environment.local_docker.LocalDockerEnvironment:✅ Successfully copied /home/sikannan/codeBase/microbots-introduction/code/build.log to container:/var/log
INFO:httpx:HTTP Request: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses "HTTP/1.1 200 OK"
INFO:microbots.llm.llm:The llm response is {'task_done': False, 'thoughts': 'Start by listing the contents of /var/log to identify the relevant log file to analyze.', 'command': 'ls -1 /var/log'} 
INFO: MicroBot : ℹ️  TASK STARTED : 
            Analyze the log file `/var/log`
        ...
INFO: MicroBot :-------------------- Step-1 --------------------
INFO: MicroBot : 💭  LLM thoughts: Start by listing the contents of /var/log to identify the relevant log file to analyze.
INFO: MicroBot : ➡️  LLM tool call : "ls -1 /var/log"
INFO: MicroBot : ⬅️  Command output:
ShellCommunicator.log
alternatives.log
apt
btmp
build.log
dpkg.log
fontconfig.log
lastlog
wtmp
INFO:httpx:HTTP Request: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses "HTTP/1.1 200 OK"
INFO:microbots.llm.llm:The llm response is {'task_done': False, 'thoughts': 'Determine sizes to choose which logs to open safely without producing excessive output.', 'command': 'ls -lh /var/log'} 
INFO: MicroBot :-------------------- Step-2 --------------------
INFO: MicroBot : 💭  LLM thoughts: Determine sizes to choose which logs to open safely without producing excessive output.
INFO: MicroBot : ➡️  LLM tool call : "ls -lh /var/log"
INFO: MicroBot : ⬅️  Command output:
total 276K
-rw-r--r-- 1 root   root   3.8K May 23 03:24 ShellCommunicator.log
-rw-r--r-- 1 root   root    27K Mar 11 12:28 alternatives.log
drwxr-xr-x 1 root   root   4.0K Mar 11 12:31 apt
-rw-rw---- 1 root   utmp      0 Feb 23 00:00 btmp
-rw-rw-r-- 1 vscode vscode  200 May 18 06:43 build.log
-rw-r--r-- 1 root   root   232K Mar 11 12:31 dpkg.log
-rw-r--r-- 1 root   root    605 Feb 24 20:39 fontconfig.log
-rw-rw-r-- 1 root   utmp      0 Feb 23 00:00 lastlog
-rw-rw-r-- 1 root   utmp      0 Feb 23 00:00 wtmp
INFO:httpx:HTTP Request: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses "HTTP/1.1 200 OK"
INFO:microbots.llm.llm:The llm response is {'task_done': False, 'thoughts': 'Open the small custom build log first to check for any failures.', 'command': "sed -n '1,120p' /var/log/build.log"} 
INFO: MicroBot :-------------------- Step-3 --------------------
INFO: MicroBot : 💭  LLM thoughts: Open the small custom build log first to check for any failures.
INFO: MicroBot : ➡️  LLM tool call : "sed -n '1,120p' /var/log/build.log"
INFO: MicroBot : ⬅️  Command output:
app.c: In function ‘add’:
app.c:5:17: error: expected ‘;’ before ‘}’ token
    5 |     return a + b
      |                 ^
      |                 ;
    6 | }
      | ~
INFO:httpx:HTTP Request: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses "HTTP/1.1 200 OK"
INFO:microbots.llm.llm:The llm response is {'task_done': False, 'thoughts': 'Confirm the source file that caused the build error by locating app.c in the code directory.', 'command': 'find //workdir/code -maxdepth 2 -type f -name "app.c"'} 
INFO: MicroBot :-------------------- Step-4 --------------------
INFO: MicroBot : 💭  LLM thoughts: Confirm the source file that caused the build error by locating app.c in the code directory.
INFO: MicroBot : ➡️  LLM tool call : "find //workdir/code -maxdepth 2 -type f -name \"app.c\""
INFO: MicroBot : ⬅️  Command output:
//workdir/code/app.c
INFO:httpx:HTTP Request: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses "HTTP/1.1 200 OK"
INFO:microbots.llm.llm:The llm response is {'task_done': False, 'thoughts': 'View the source file to confirm the exact line and context of the syntax error mentioned in build.log.', 'command': "sed -n '1,120p' //workdir/code/app.c"} 
INFO: MicroBot :-------------------- Step-5 --------------------
INFO: MicroBot : 💭  LLM thoughts: View the source file to confirm the exact line and context of the syntax error mentioned in build.log.
INFO: MicroBot : ➡️  LLM tool call : "sed -n '1,120p' //workdir/code/app.c"
INFO: MicroBot : ⬅️  Command output:
// app.c — A simple greeting program with a syntax error
#include <stdio.h>

int add(int a, int b) {
    return a + b
}

int main(void) {
    printf("Hello, Microbots!\n");
    printf("2 + 3 = %d\n", add(2, 3));
    return 0;
}

INFO:httpx:HTTP Request: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses "HTTP/1.1 200 OK"
INFO:microbots.llm.llm:The llm response is {'task_done': True, 'thoughts': 'Reviewed /var/log and inspected build.log, which reports a C compilation error: "expected \';\' before \'}\' token" at app.c:5. Opened the referenced source file at //workdir/code/app.c and confirmed the root cause: the function add(int a, int b) is missing a semicolon after the return expression ("return a + b"). This syntax error causes the build failure. Fix: add a semicolon so the line reads "return a + b;" and rebuild.', 'command': ''} 
INFO: MicroBot : 💭  LLM final thoughts: Reviewed /var/log and inspected build.log, which reports a C compilation error: "expected ';' before '}' token" at app.c:5. Opened the referenced source file at //workdir/code/app.c and confirmed the root cause: the function add(int a, int b) is missing a semicolon after the return expression ("return a + b"). This syntax error causes the build failure. Fix: add a semicolon so the line reads "return a + b;" and rebuild.
INFO: MicroBot :🔚 TASK COMPLETED : 
            An...
Reviewed /var/log and inspected build.log, which reports a C compilation error: "expected ';' before '}' token" at app.c:5. Opened the referenced source file at //workdir/code/app.c and confirmed the root cause: the function add(int a, int b) is missing a semicolon after the return expression ("return a + b"). This syntax error causes the build failure. Fix: add a semicolon so the line reads "return a + b;" and rebuild.
INFO:microbots.environment.local_docker.LocalDockerEnvironment:🛠️  Tearing down overlay mount for code
INFO:microbots.environment.local_docker.LocalDockerEnvironment:✅  Unmounted overlay for code
INFO:microbots.environment.local_docker.LocalDockerEnvironment:🛑  Removing overlay dirs at //workdir/code and /workdir/overlay/
INFO:microbots.environment.local_docker.LocalDockerEnvironment:🗑️  Removed overlay directories for code
INFO:microbots.environment.local_docker.LocalDockerEnvironment:🗑️  Removed working directory at /home/sikannan/MICROBOTS_WORKDIR_da35245a